# Evalkit

./: .gitignore  LEARNING_NOTES.md  README.md  pyproject.toml
evalkit/backends/: llamacpp.py  ollama.py
evalkit/cli/: main.py
evalkit/core/: hardware.py  metrics.py  recommendations.py
evalkit/reporters/: terminal.py
