[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalkit"
version = "0.1.0"
description = "Inference profiler and optimizer for local and API-based LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
evalkit = "evalkit.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["evalkit"]
